[package]
name = "gandalf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
http = "1.1.0"
pingora = { version = "0.3.0", features = ["proxy"] }
serde = { version = "1.0.213", features = ["derive", "rc"] }
thiserror = "1.0.65"
toml = "0.8.19"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
