[workspace]
members = ["gandalf","tunnel","core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
gandalf-core.path = "./core"
http = "1.1.0"
pingora = { version = "0.4.0", features = ["proxy", "rustls"] }
serde = { version = "1.0.213", features = ["derive", "rc"] }
thiserror = "1.0.65"
toml = "0.8.19"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
xdg = "2.5.2"
