[package]
name = "gandalf-core"
edition.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
http.workspace = true
pingora.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
