[package]
name = "gandalf-tunnel"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
clap.workspace = true
gandalf-core.workspace = true
http.workspace = true
pingora.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xdg.workspace = true
